<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rv_recipe_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:tag="@string/layout_phone"
    tools:context="com.example.alify.bakingapp.RecipeActivity">
</android.support.v7.widget.RecyclerView>
