<resources>
    <string name="app_name">BakingApp</string>
    <string name="recipe_image">Recipe Image</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ingredient_name">Name:</string>
    <string name="ingredient_quantity">Quantity:</string>
    <string name="ingredient_measure">Measure:</string>
    <string name="btn_previous">Previous</string>
    <string name="btn_next">Next</string>
    <string name="layout_tablet">tablet</string>
    <string name="layout_tablet_xlarge">tablet_x</string>
    <string name="layout_phone">phone</string>
</resources>
